# phoenix-engine

./: .gitignore  CMakeLists.txt  README.md  build.zig  release.py
.github/workflows/: clippy.yml
data/: setups.txt
python/: agent.py  clippy_agent.py  clippy_agent_test.py  fen_utils.py  fenix.py  find_k.py  game_manager.py  ia_agent.py  mcts_agent.py  minimax_agent.py  optimize.py  optimize3.py  optimize4.py  perft.py  random_agent.py  test.py  test_humain.py  test_mcts.py  test_minimax.py  test_position.py  texel.py  tuning.py  weird_position.py
python/clippy_shell/: post.py  pre.py
python/comparaison/: comparaison.py  plot_comparaison.py
src/: bitboard.c  bitboard.h  clippy.c  context.h  core.h  eval.c  eval.h  filter.c  list.h  main.c  move.c  move.h  movegen.c  movegen.h  nnue.c  nnue.h  nnue_data.h  phoenix.c  position.c  position.h  search.c  search.h  selfplay.c  state.h  tt.c  tt.h  ugi.c  ugi.h
test/: perft.c
